[project]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "141Kamrul",email = "bsse1418@iit.du.ac.bd"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "linear_regression", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
